# mesh-sequence-compression

./: .gitignore  CMakeLists.txt  compress.cpp  decompress.cpp  main.cpp  note.md  p3d-file-format.md  ptb_pack.cpp  ptb_unpack.cpp  readme.md  report.md
c++/: compress.cpp  decompress.cpp
c++/compression/: Compression_Valence_Common.h  Compression_Valence_Polyhedron.h
c++/compression/polyhedron/: Polyhedron_Builder.h  mesh.cpp  polyhedron_enriched_polyhedron.h
compression/: CMakeLists.txt  Compression_Valence_Basemesh_builder.h  Compression_Valence_Common.h  Compression_Valence_Component.cpp  Compression_Valence_Component.h  Compression_Valence_Items.h  Compression_Valence_Polyhedron.h  Matrix3X3.h  Processing_Kai.h  arithmetic_codec.cpp  arithmetic_codec.h  mepp_config.h
compression/polyhedron/: .polyhedron.h___jb_old___.swp  Polyhedron_Builder.h  Polyhedron_Copy.h  Polyhedron_OBJ_CGALImporter.h  mesh.cpp  mesh.h  polyhedron.h  polyhedron_enriched_polyhedron.h  polyhedron_shared_items.h
draco-js/: index.html
draco-js/data/: 0007_00.drc  0008_00.drc  0018_00.drc  0023_00.drc  0024_00.drc  0025_00.drc  0034_00.drc  0035_00.drc  0041_00.drc  0042_00.drc  0043_00.drc  0045_00.drc  0046_00.drc  0047_00.drc  0049_00.drc  0051_00.drc  0053_00.drc  0054_00.drc  0057_00.drc  0058_00.drc  0062_00.drc  0063_00.drc  0065_00.drc  0067_00.drc  0068_00.drc  0070_00.drc  0073_00.drc  0074_00.drc  0077_00.drc  0079_00.drc  0083_00.drc  0089_00.drc  0090_00.drc  0096_00.drc  0102_00.drc  0105_00.drc  0106_00.drc  0107_00.drc  0110_00.drc  0112_00.drc  (+126 more)
draco-js/js/: three.min.js  transport.js  worker.js
flag/data/drc/: 0000_00.drc  0001_00.drc  0002_00.drc  0003_00.drc  0004_00.drc  0005_00.drc  0006_00.drc  0009_00.drc  0010_00.drc  0011_00.drc  0012_00.drc  0013_00.drc  0014_00.drc  0015_00.drc  0016_00.drc  0017_00.drc  0019_00.drc  0020_00.drc  0021_00.drc  0022_00.drc  0026_00.drc  0027_00.drc  0028_00.drc  0029_00.drc  0030_00.drc  0031_00.drc  0032_00.drc  0033_00.drc  0036_00.drc  0037_00.drc  0038_00.drc  0039_00.drc  0040_00.drc  0044_00.drc  0048_00.drc  0050_00.drc  0052_00.drc  0055_00.drc  0056_00.drc  0059_00.drc  (+188 more)
flag/js/: DRACOLoader.js  painter.js  worker.js  worker2.js
script/: ptb_pack.sh
scripts/: add_obj.py  clear2.py  deflat_all.sh  diff_obj.py  drc_encode.sh  nowave2.py  ptb_pack_pos2.sh  reshuffle.py  rm-texture.py  rm_texture.sh  toP3d.sh  wave2.py
sim-zip/: index.html
sim-zip/data/: 0.pos  1.pos  10.pos  100.pos  101.pos  102.pos  103.pos  104.pos  105.pos  106.pos  107.pos  108.pos  109.pos  11.pos  110.pos  111.pos  112.pos  113.pos  114.pos  115.pos  116.pos  117.pos  118.pos  119.pos  12.pos  120.pos  121.pos  122.pos  123.pos  124.pos  125.pos  126.pos  127.pos  128.pos  13.pos  14.pos  15.pos  16.pos  17.pos  18.pos  (+89 more)
sim-zip/data/windy_flag_level128/: .topo_cache
sim-zip/js/: deprecated.js
sim-zip/js/decoder/: arithmetic_codec.js  half_edge.js  ptb_decoder.js  subdivide.js  worker.js
simple-js/css/: main_page.css
simple-js/js/: main.js
simple-js/js/decoder/: constant.js  debug_log.js  decompress.js  unsimplify.js  worker.js
simple-js/js/viewer/: light.js  three.js
src/compression/: Compression_Valence_Basemesh_builder.h  Compression_Valence_Component.cpp  Compression_Valence_Component.h  Compression_Valence_Items.h  Matrix3X3.h  arithmetic_codec.cpp  arithmetic_codec.h
src/compression/polyhedron/: mesh.h
vol2vtk/: vol2vtk.cpp
windy_flag_level32/: ptb_pack.sh  ptb_pack_pos.sh  wave.py
